# Notes

cpp/: Установка Qt на платформе Windows.md
Игрострой/: ReadMe.md  Инфопоршень.md  Таблица строк.md
Игрострой/projects/StringTableEditor/: .gitignore  CMakeLists.txt  README.md
Игрострой/projects/StringTableEditor/example/: example.json
Игрострой/projects/StringTableEditor/src/: CMakeLists.txt  stringtable.cpp  stringtable.h
Игрострой/projects/StringTableEditor/src/view/: mainwindow.cpp  mainwindow.h  mainwindow.ui
